Añadir CSS, cambio de imagenes y de fuente

--- a/compra/compra.html
+++ b/compra/compra.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="index,follow">
         <meta description="Esta página mostrará imagenes de gatitos 🐈‍⬛🐈🐱">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>Es mi lista de la compra</title>
 </head>
@@ -35,14 +37,14 @@
         <ol>
             <li>
                 <figure>
-                    <figcaption>Pollo🐔</figcaption>
-                    <img src="pics/pollo.jpg" alt="Pollo">
+                    <figcaption>Huevos🍳</figcaption>
+                    <img src="pics/huevo.jpg" alt="Pollo">
                 </figure>
             </li>
             <li>
                 <figure>
-                    <figcaption>lomo de cerdo🐽</figcaption>
-                    <img src="pics/lomoCerdo.jpg" alt="Lomo de cerdo">
+                    <figcaption>Ternera🐮</figcaption>
+                    <img src="pics/ternera.jpg" alt="Lomo de cerdo">
                 </figure>
             </li>
         </ol>
@@ -62,6 +64,6 @@
             </li>
         </ol>
     </ul>
-    <a href="index.html">Vuelta al inicio</a>
+    <a href="../HTML5/index.html"><button>Vuelta al inicio</button></a>
 </body>
 </html>
